Update coming soon tag text

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     <div class="coming-soon-container">
       <div class="coming-card">
         <span class="coming-text">🎮 New Games Coming Soon...</span><br>
-        <span class="tag">Stay Tuned 🚀</span>
+        <span class="tag">COMING SOON</span>
       </div>
     </div>
   </section>
