--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     <!-- COMING SOON -->
     <div class="coming-soon-container">
       <div class="coming-card">
-        <span class="coming-text">🎮 New Games Coming Soon...</span><br><br>
+        <span class="coming-text">🎮 New Games Coming Soon...</span><br><br><br><br>
         <span class="tag">COMING SOON</span>
       </div>
     </div>
