mobile responsive fix

--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -91,7 +91,7 @@
     <a href="https://instagram.com/skvlogergj32" target="_blank"><i class="fab fa-instagram"></i></a>
     <a href="https://www.facebook.com/share/1CD5ZxmPUz/" target="_blank"><i class="fab fa-facebook"></i></a>
   </div>
-</nav>
+</nav><br><br><br>
 
 <h1>Rock Paper Scissors ✊✋✌️</h1>
 <p>Choose One 👇</p>
