--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SK Games</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Icons -->
+  <!-- ICONS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <style>
@@ -20,200 +20,227 @@
     body {
       background: #0f172a;
       color: white;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
 
-    /* ===== NAVBAR (MATCHED TO GAMES PAGE) ===== */
+    /* 🌐 NAVBAR (same as games page) */
     .navbar {
       width: 100%;
       background: #020617;
+      padding: 15px 25px;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 12px 20px;
       position: sticky;
       top: 0;
-      z-index: 1000;
+      z-index: 99;
     }
 
-    .brand {
-      font-size: 30px;
-      color: #38bdf8;
+    .logo {
+      font-size: 28px;
       font-weight: bold;
+      color: #38bdf8;
     }
 
-    .nav-center {
+    .nav-links {
       display: flex;
-      gap: 30px;
+      gap: 25px;
+      list-style: none;
     }
 
-    .nav-center a {
-      color: white;
+    .nav-links a {
       text-decoration: none;
-      font-size: 22px;
-      font-weight: 500;
-    }
-
-    .nav-center a:hover {
-      color: #38bdf8;
-    }
-
-    .nav-icons i {
-      font-size: 26px;
-      margin-left: 10px;
       color: white;
-      cursor: pointer;
-      transition: 0.3s;
+      font-size: 20px;
     }
 
-    .nav-icons i:hover {
+    .nav-links .active,
+    .nav-links a:hover {
+      color: #38bdf8;
+      font-weight: 600;
+    }
+
+    .social a {
+      font-size: 24px;
+      color: white;
+      margin-left: 12px;
+    }
+
+    .social a:hover {
       color: #38bdf8;
     }
 
-    /* ===== MOBILE NAVBAR FIX ===== */
-    @media(max-width: 768px) {
-      .navbar {
-        flex-direction: column;
-        gap: 8px;
-        padding: 15px;
-        text-align: center;
-      }
-
-      .brand {
-        font-size: 26px;
-      }
-
-      .nav-center {
-        gap: 18px;
-      }
+    /* 👇 MAIN CONTENT WRAPPER */
+    .content {
+      flex: 1;
+      padding-bottom: 40px;
     }
 
-    /* ===== HERO SECTION ===== */
+    /* 🎉 HERO SECTION */
     .hero {
       text-align: center;
-      padding: 45px 20px;
+      margin: 40px 10px;
     }
 
     .hero h1 {
       font-size: 34px;
-      font-weight: bold;
+      color: #38bdf8;
     }
 
     .hero p {
       font-size: 18px;
-      margin-top: 8px;
-      opacity: 0.85;
+      opacity: .85;
+      margin-top: 5px;
     }
 
-    /* ===== GAMES CARDS ===== */
-    .games-title {
-      text-align: center;
-      margin-top: 20px;
-      font-size: 30px;
-      font-weight: bold;
-    }
-
-    .games-grid {
+    /* 🎮 GAME CARDS (same style as game page) */
+    .games-container {
+      max-width: 900px;
+      margin: 30px auto;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
       gap: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
       padding: 20px;
     }
 
     .game-card {
-      background: #020617;
+      background: #1e293b;
+      padding: 25px 10px;
       border-radius: 12px;
-      padding: 25px;
       text-align: center;
       cursor: pointer;
-      transition: 0.3s;
-      border: 1px solid #1e293b;
+      transition: .3s;
+      border: 2px solid transparent;
     }
 
-    .game-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 0 15px #38bdf8;
-    }
-
-    .game-card .icon {
-      font-size: 40px;
+    .game-card i,
+    .game-card span {
+      font-size: 35px;
       margin-bottom: 10px;
+      display: block;
       color: #38bdf8;
     }
 
-    .game-card h3 {
-      font-size: 20px;
-      margin-bottom: 6px;
+    .game-card:hover {
+      transform: scale(1.05);
+      background: #243347;
+      border-color: #38bdf8;
     }
 
-    .game-card p {
-      font-size: 14px;
-      opacity: 0.8;
+    /* 🚧 COMING SOON */
+    .coming-btn {
+      text-align: center;
+      margin: 30px auto;
+      width: 60%;
+      padding: 15px;
+      border-radius: 10px;
+      border: 2px solid #38bdf8;
+      background: #142033;
+      font-size: 18px;
+      color: #38bdf8;
+      cursor: pointer;
+      transition: 0.3s;
     }
 
+    .coming-btn:hover {
+      background: #1f2f48;
+      transform: scale(1.03);
+    }
+
+    /* 🦶 FOOTER AT BOTTOM  */
     footer {
       text-align: center;
-      padding: 20px;
+      padding: 15px;
       background: #020617;
-      margin-top: 40px;
       font-size: 14px;
-      opacity: 0.7;
+      opacity: .75;
+      margin-top: auto;
+    }
+
+    /* 📱 RESPONSIVE */
+    @media(max-width:600px) {
+      .nav-links a {
+        font-size: 16px;
+      }
+
+      .logo {
+        font-size: 24px;
+      }
+
+      .games-container {
+        grid-template-columns: repeat(2, 1fr);
+      }
+
+      .coming-btn {
+        width: 90%;
+        font-size: 16px;
+      }
     }
   </style>
 </head>
 
 <body>
 
-  <!-- 🟦 NAVBAR -->
-  <div class="navbar">
-    <div class="brand">SK</div>
+  <!-- NAVBAR -->
+  <nav class="navbar">
+    <div class="logo">SK</div>
 
-    <div class="nav-center">
-      <a href="index.html">Home</a>
-      <a href="games.html">Game</a>
-      <a href="about.html">About</a>
-    </div>
+    <ul class="nav-links">
+      <li><a class="active" href="index.html">Home</a></li>
+      <li><a href="games.html">Game</a></li>
+      <li><a href="about.html">About</a></li>
+    </ul>
 
-    <div class="nav-icons">
+    <div class="social">
       <a href="https://instagram.com/skvlogergj32" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.facebook.com/share/1CD5ZxmPUz/" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a href="https://facebook.com/share/1CD5ZxmPUz/" target="_blank"><i class="fab fa-facebook"></i></a>
     </div>
+  </nav>
+
+
+  <!-- CONTENT -->
+  <div class="content">
+
+    <!-- HERO -->
+    <section class="hero">
+      <h1>🎮 Welcome to SK Games 🎮</h1>
+      <p>Play free browser games & have fun</p>
+    </section>
+
+    <!-- GAME LIST -->
+    <div class="games-container">
+      <div class="game-card" onclick="location.href='tictactoe.html'">
+        <i class="fas fa-times"></i>
+        <h3>Tic Tac Toe</h3>
+      </div>
+
+      <div class="game-card" onclick="location.href='rock-paper-scissors.html'">
+        <i class="fas fa-hand-rock"></i>
+        <h3>Rock Paper Scissors</h3>
+      </div>
+
+      <div class="game-card" onclick="location.href='memory.html'">
+        <i class="fas fa-brain"></i>
+        <h3>Memory Game</h3>
+      </div>
+
+      <div class="game-card" onclick="location.href='snake.html'">
+        <span>🐍</span>
+        <h3>Snake Game</h3>
+      </div>
+    </div>
+
+    <div class="coming-btn">🎮 More Games Coming Soon...</div>
+
   </div>
 
-  <!-- HERO -->
-  <section class="hero">
-    <h1>Welcome to SK Games 🎮</h1>
-    <p>Play free browser games & have fun</p>
-  </section>
-
-  <h2 class="games-title">🎮 All Games</h2>
-
-  <div class="games-grid">
-    <div class="game-card" onclick="location.href='tictactoe.html'">
-      <i class="fas fa-times icon"></i>
-      <h3>Tic Tac Toe</h3>
-      <p>Play & win</p>
-    </div>
-
-    <div class="game-card" onclick="location.href='rock-paper-scissors.html'">
-      <i class="fas fa-hand-rock icon"></i>
-      <h3>Rock Paper Scissors</h3>
-      <p>Beat the computer</p>
-    </div>
-
-    <div class="game-card" onclick="location.href='memory.html'">
-      <i class="fas fa-brain icon"></i>
-      <h3>Memory Game</h3>
-      <p>Train your memory</p>
-    </div>
-
-    <div class="game-card" onclick="location.href='snake.html'">
-      <span class="icon">🐍</span>
-      <h3>Snake Game</h3>
-      <p>Eat food & grow</p>
-    </div>
-  </div>
-
-  <footer>© 2025 SK Games | All Rights Reserved</footer>
+  <!-- FOOTER -->
+  <footer>
+    © 2025 SK Games | All Rights Reserved
+  </footer>
 
 </body>
+
 </html>
