--- a/about.html
+++ b/about.html
@@ -1,205 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>About | SK Games</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Font Awesome for icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <!-- ICONS -->
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: Arial, Helvetica, sans-serif;
+    *{
+      margin:0;
+      padding:0;
+      box-sizing:border-box;
+      font-family:Arial, sans-serif;
     }
 
-    body {
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-      color: #fff;
-      min-height: 100vh;
+    body{
+      background:#0f172a;
+      color:white;
+      min-height:100vh;
+      display:flex;
+      flex-direction:column;
     }
 
-    /* NAVBAR */
-    nav {
-      width: 100%;
-      height: 70px;
-      background: rgba(0,0,0,0.6);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0 30px;
+    /* 🌐 NAVBAR */
+    .navbar{
+      width:100%;
+      background:#020617;
+      padding:15px 25px;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      position:sticky;
+      top:0;
+      z-index:99;
+    }
+    .logo{
+      font-size:30px;
+      font-weight:bold;
+      color:#38bdf8;
+    }
+    .nav-links{
+      display:flex;
+      gap:25px;
+      list-style:none;
+    }
+    .nav-links a{
+      text-decoration:none;
+      color:white;
+      font-size:20px;
+      transition:.3s;
+    }
+    .nav-links a:hover,
+    .nav-links .active{
+      color:#38bdf8;
+      font-weight:600;
+    }
+    .social a{
+      color:white;
+      font-size:24px;
+      margin-left:12px;
+      transition:.3s;
+    }
+    .social a:hover{
+      color:#38bdf8;
     }
 
-    .brand {
-      font-size: 30px;
-      font-weight: bold;
-      color: #00ffd5;
+    /* 📌 ABOUT SECTION */
+    .about-container{
+      max-width:900px;
+      margin:50px auto;
+      padding:20px;
+      text-align:center;
+    }
+    .about-container h1{
+      font-size:32px;
+      color:#38bdf8;
+      margin-bottom:15px;
+    }
+    .about-container p{
+      font-size:18px;
+      line-height:1.6;
+      opacity:0.9;
+      margin-bottom:20px;
     }
 
-    .nav-links a {
-      color: #fff;
-      text-decoration: none;
-      margin: 0 15px;
-      font-size: 25px;
-      transition: 0.3s;
+    /* 📦 INFO CARDS */
+    .cards{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
+      gap:18px;
+      margin-top:40px;
+    }
+    .card{
+      background:#1e293b;
+      padding:25px;
+      border-radius:12px;
+      text-align:center;
+      transition:.3s;
+      border:2px solid transparent;
+    }
+    .card:hover{
+      transform:translateY(-6px);
+      background:#243347;
+      border-color:#38bdf8;
+    }
+    .card i{
+      font-size:40px;
+      color:#38bdf8;
+      margin-bottom:10px;
+    }
+    .card h3{
+      font-size:20px;
+      margin:8px 0;
+    }
+    .card p{
+      font-size:15px;
+      opacity:0.8;
     }
 
-    .nav-links a:hover {
-      color: #00ffd5;
+    /* 🌙 FOOTER */
+    footer{
+      margin-top:auto;
+      text-align:center;
+      padding:18px;
+      background:#020617;
+      opacity:0.7;
+      font-size:14px;
     }
 
-    .social-icons a {
-      color: #fff;
-      margin-left: 15px;
-      font-size: 30px;
-      transition: 0.3s;
+    /* 📱 MOBILE FIX */
+    @media(max-width:600px){
+      .nav-links{gap:10px;}
+      .nav-links a{font-size:16px;}
+      .logo{font-size:24px;}
+      .about-container h1{font-size:26px;}
+      .about-container p{font-size:16px;}
     }
 
-    .social-icons a:hover {
-      color: #00ffd5;
-    }
-
-    /* ABOUT SECTION */
-    .about-container {
-      max-width: 1000px;
-      margin: 50px auto;
-      padding: 30px;
-    }
-
-    .about-container h1 {
-      font-size: 36px;
-      margin-bottom: 15px;
-      color: #00ffd5;
-    }
-
-    .about-container p {
-      font-size: 17px;
-      line-height: 1.7;
-      margin-bottom: 20px;
-      color: #e0e0e0;
-    }
-
-    /* CARDS */
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 40px;
-    }
-
-    .card {
-      background: rgba(255,255,255,0.08);
-      padding: 25px;
-      border-radius: 15px;
-      text-align: center;
-      transition: 0.3s;
-    }
-
-    .card:hover {
-      transform: translateY(-8px);
-      background: rgba(255,255,255,0.15);
-    }
-
-    .card i {
-      font-size: 40px;
-      margin-bottom: 15px;
-      color: #00ffd5;
-    }
-
-    .card h3 {
-      margin-bottom: 10px;
-      font-size: 20px;
-    }
-
-    .card p {
-      font-size: 15px;
-      color: #ddd;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: rgba(0,0,0,0.5);
-      margin-top: 50px;
-      font-size: 14px;
-    }
   </style>
 </head>
 
 <body>
 
-  <!-- NAVBAR -->
-  <nav>
-    <div class="brand">SK</div>
+  <!-- 🚀 NAVBAR -->
+  <nav class="navbar">
+    <div class="logo">SK</div>
 
-    <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="games.html">Game</a>
-      <a href="about.html">About</a>
-    </div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="games.html">Game</a></li>
+      <li><a class="active" href="about.html">About</a></li>
+    </ul>
 
-    <div class="social-icons">
-      <a href="https://instagram.com/skvlogergj32" target="_blank">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="https://www.facebook.com/share/1CD5ZxmPUz/" target="_blank">
-        <i class="fab fa-facebook"></i>
-      </a>
+    <div class="social">
+      <a href="https://instagram.com/skvlogergj32" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.facebook.com/share/1CD5ZxmPUz/" target="_blank"><i class="fab fa-facebook"></i></a>
     </div>
   </nav>
 
-  <!-- ABOUT CONTENT -->
-  <div class="about-container">
+  <!-- 📌 ABOUT CONTENT -->
+  <section class="about-container">
     <h1>About SK Games</h1>
-
     <p>
-      Welcome to <strong>SK Games</strong> 🎮  
-      Ye website specially un logo ke liye banayi gayi hai jo simple, fun aur
-      time-pass games khelna pasand karte hain.
+      Welcome to <b>SK Games 🎮</b> — A fun place to play simple, addictive and interactive browser games!
+    </p>
+    <p>
+      Yahan par tum Tic Tac Toe, Snake, Memory Game, Rock Paper Scissors aur bohot saare naye games kheloge 🎯  
+      Aur naye games regular update hote rahenge 🚀
     </p>
 
-    <p>
-      Yahan par tumhe different types ke browser games milenge jaise
-      Tic Tac Toe, Memory Game, Snake Game aur aane wale time me aur bhi
-      exciting games add kiye jayenge 🚀
-    </p>
-
-    <!-- INFO CARDS -->
     <div class="cards">
-
       <div class="card">
-        <i class="fas fa-gamepad" onclick="location.href='games.html'"></i>
+        <i class="fas fa-gamepad"></i>
         <h3>Fun Games</h3>
-        <p>Simple aur addictive games jo tum directly browser me khel sakte ho.</p>
+        <p>Browser me directly games khelo — bina load ya login.</p>
       </div>
 
       <div class="card">
         <i class="fas fa-mobile-alt"></i>
         <h3>Mobile Friendly</h3>
-        <p>Har game mobile aur desktop dono par smoothly kaam karta hai.</p>
+        <p>Har game phone aur PC dono par smooth chalega.</p>
       </div>
 
       <div class="card">
         <i class="fas fa-bolt"></i>
         <h3>Fast & Light</h3>
-        <p>No login, no heavy loading – bas click karo aur khelna shuru 🎯</p>
+        <p>No lag, no ads, no time waste — sirf entertainment!</p>
       </div>
 
       <div class="card">
         <i class="fas fa-user"></i>
-        <h3>Made by SK</h3>
-        <p>Is website ko SK ne design aur develop kiya hai ❤️</p>
+        <h3>Made By SK</h3>
+        <p>Ye website ❤️ se banayi gayi hai, sirf aapke entertainment ke liye.</p>
       </div>
-
     </div>
-  </div>
+  </section>
 
-  <footer>
-    © 2025 SK Games | All Rights Reserved
-  </footer>
+  <footer>© 2025 SK Games | All Rights Reserved</footer>
 
 </body>
 </html>
