mobile responsive fix

--- a/memory.html
+++ b/memory.html
@@ -4,19 +4,22 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Memory Game | SK</title>
-<link rel="stylesheet" href="memory.css">
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+<link rel="stylesheet" href="memory.css">
 </head>
 
 <body>
+
+<!-- 🔊 Sounds -->
 <audio id="clickSound" src="pop-423717.mp3"></audio>
 <audio id="winSound" src="victory.mp3"></audio>
 
-<!-- 🔥 NEW NAVBAR (same as other pages) -->
+<!-- 🚀 FIXED NAVBAR -->
 <nav class="navbar">
   <div class="logo">SK</div>
-
+  
   <ul class="nav-links">
     <li><a href="index.html">Home</a></li>
     <li><a href="games.html">Game</a></li>
@@ -37,5 +40,6 @@
 <button id="restartBtn">🔄 Restart</button>
 
 <script src="memory.js"></script>
+
 </body>
 </html>
