--- a/memory.html
+++ b/memory.html
@@ -2,24 +2,23 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Memory Game | SK</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 <link rel="stylesheet" href="memory.css">
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 
 <body>
 
-<!-- 🔊 Sounds -->
 <audio id="clickSound" src="pop-423717.mp3"></audio>
 <audio id="winSound" src="victory.mp3"></audio>
 
-<!-- 🚀 FIXED NAVBAR -->
+<!-- ⭐ SAME NAVBAR AS OTHER PAGES -->
 <nav class="navbar">
   <div class="logo">SK</div>
-  
+
   <ul class="nav-links">
     <li><a href="index.html">Home</a></li>
     <li><a href="games.html">Game</a></li>
@@ -32,7 +31,8 @@
   </div>
 </nav>
 
-<h1>🃏 Memory Card Game</h1>
+
+<h1 class="title">🧠 Memory Card Game</h1>
 <h3 id="status">Find all the matching pairs!</h3>
 
 <div class="game-board" id="gameBoard"></div>
@@ -40,6 +40,5 @@
 <button id="restartBtn">🔄 Restart</button>
 
 <script src="memory.js"></script>
-
 </body>
 </html>
